  gain xp

05/08/2001
- Finished Archers books
- 90 day player timeout added.

05/08/2001 - PernMangband 3.2.0

10/08/2001
- Golems works
- Fixed Fury warrior technic

11/08/2001 - evileye
- New polygonal houses work ok now. Checks for moving off depth
  work. Player disconnect is handled ok.
  Optimisation for houses which are rectangular is needed before
  inclusion into the game properly.
  Scroll limits need to be discussed and set accordingly.

11/08/2001 - evileye
- Rectangular optimisation of houses complete.
- House creation is now compatible with the dynamic houses array.

13/08/2001 - evileye
- Added courtyards - houses with no floor (inscribe FIRST scroll @F)
- Houses were not killed on player suicide. Fixed
- Made start on a delete_house function (For DM)
- Houses may now be created within larger houses.

25/08/2001
- Rings of Flames, Acid and Ice now reduce the corresponding element damage
  by (AC * 5)%

28/08/2001
- Slowing effect of monks doubled in effectiveness

30/08/2001
- Updated commands.txt thanks to jir

10/09/2001
- When someone dies stuff only gets dropped if he/she was >= lvl5.
  Thats to prevent cheezing

27/09/2001
- Server bugfix, object description string was too small [80] for including
  the fake artifact inscriptions. I made every instance [160]. This will
  never be necessary, certainly not in all cases, but efficiency may be
  worked upon later.

28/09/2001
- Client bug fixed (peruse file overlay) Usually caused by lag.
  Common symptom, the player list appears on game screen.

28/09/2001 - Client changes (Zz)
- Now you can specify an argument in Windows and client will connect 
  directly bypassing meta server (previously this only worked for Unix clients)
- Multiple colors for different types of messages in recall window 
  (death, kill, private messages, etc.)
- CTRL-O works like CTRL-P except only shows important messages - good 
  for review after a long fight or long AFK
